# project_template-2

./: CMakeLists.txt  README.md  args.py  generate.py  git.spy  new_project.py  panic.py  utils.py
.github/workflows/: ci.yml
templates/: .clang-format  .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE  README.md  vcpkg.json
templates/config/cmake/: FindClangTidy.cmake  FindStdModules.cmake  add_packages.cmake  add_packages_impl.cmake  add_targets.cmake  handle_options.cmake  handle_options_impl.cmake
templates/config/cmake/toolchains/: toolchain_base.cmake
templates/config/vcpkg/cmake/toolchains/: toolchain_base.cmake
templates/docs/project/teams/: conduct_teams.md  leads.md
test/: default.test  lit.cfg.py
test/simple/: custom-clang-tidy.test  default-options.test  no-clang-tidy.test
test/simple/modifications/: vcpkg.json
test/simple/modifications/config/cmake/: add_packages.cmake
test/simple/modifications/source/: CMakeLists.txt  hello.cpp  message.cpp  message.hpp  test_message.cpp
